# serializer version: 1
# name: test_vacuum[vacuum.700series_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
        'max_power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.700series_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 12348>,
    'translation_key': None,
    'unique_id': '900402068224000950000000_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.700series_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'powerful',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
        'max_power',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: '700series vacuum',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 12348>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.700series_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.cybele_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
        'max',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.cybele_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 28988>,
    'translation_key': None,
    'unique_id': '900402423524000511139298_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.cybele_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'powerful',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
        'max',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Cybele vacuum',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 28988>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.cybele_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.gordias_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.gordias_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 28988>,
    'translation_key': None,
    'unique_id': '900402278332000201139298_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.gordias_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'quiet',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'quiet',
        'energy_saving',
        'standard',
        'powerful',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gordias vacuum',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 28988>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.gordias_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'docked',
  })
# ---
# name: test_vacuum[vacuum.pure_i9_vacuum-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'silent',
        'smart',
        'power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'vacuum',
    'entity_category': None,
    'entity_id': 'vacuum.pure_i9_vacuum',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'electrolux',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <VacuumEntityFeature: 28988>,
    'translation_key': None,
    'unique_id': '900277470043000491100106_rvc',
    'unit_of_measurement': None,
  })
# ---
# name: test_vacuum[vacuum.pure_i9_vacuum-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <VacuumEntityStateAttribute.FAN_SPEED: 'fan_speed'>: 'smart',
      <VacuumEntityCapabilityAttribute.FAN_SPEED_LIST: 'fan_speed_list'>: list([
        'silent',
        'smart',
        'power',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pure i9 vacuum',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <VacuumEntityFeature: 28988>,
    }),
    'context': <ANY>,
    'entity_id': 'vacuum.pure_i9_vacuum',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
